<resources>
    <string name="app_name">MyFirsAplication</string>
    <string name="action_settings">Settings</string>
    <string name="btn_div">÷</string>
    <string name="btn_mult">×</string>
    <string name="btn_min">–</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_6">6</string>
    <string name="btn_5">5</string>
    <string name="btn_4">4</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_comma">,</string>
    <string name="btn_0">0</string>
    <string name="btn_res">=</string>
    <string name="btn_plus">+</string>
    <string name="btn_del">DEL</string>
    <string name="rad">RAD</string>
    <string name="text_about_game">ОБ ИГРЕ</string>
    <string name="text_my_ach">МОИ ДОСТИЖЕНИЯ</string>
    <string name="text_rait_game">РЕЙТИНГ ИГРОКОВ</string>
    <string name="btn_play">Play Маркет</string>
    <string name="text_share">Поделиться</string>
    <string name="text_description">sdfdsfsdfsd</string>
    <string name="text_descript">Описание</string>
    <string name="text_from">FROM: MEDIOCRE, the award winning lab behind mind altering experiments SMASH HIT and DOES NOT COMMUTE.</string>
    <string name="text_sub">SUBJECT: Explore the microversr with top scientists from across the world using the revolutionary DIRAC engine.</string>
    <string name="text_cong">MESSAGE: Congratulations!</string>
    <string name="text_thanks">Thanks to the Meditated intern opportunity colocation research (MEDIOCRE) laboratory, you have been given the exclusive opportuniny to work with DIRAC, the latest in computerized quantum disentanglement technology. You have been granted unlimited and unsuperviset access to the DIRAC mkll Quasi-Fibonacci de-</string>
    <string name="text_name">ЛУЧШИЙ ИГРОК</string>
    <string name="text_achiev">Достижения</string>
    <string name="text_save">Сохраненные игры</string>
    <string name="text_rait">Рейтинг игроков</string>
    <string name="text_main">Главная</string>
    <string name="text_new_games">Откройте новые игры</string>
    <string name="text_more">ЕЩЁ</string>
    <string name="text_clash">Clash Royale</string>
    <string name="text_supercell">Supersell</string>
    <string name="txt_free">БЕСПЛАТНО</string>
    <string name="text_dragon">Dragon Land</string>
    <string name="text_social">socialpoint</string>
    <string name="text_dirac">DIRAC</string>
    <string name="text_medio">Mediocre</string>
    <string name="text_sing_up">Sign Up</string>
    <string name="text_username">Username</string>
    <string name="text_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="text_profile">Profile name</string>
    <string name="button_sign_up">SIGN UP</string>
    <string name="text_account">Have an account already?</string>
    <string name="text_left">0:01</string>
    <string name="text_right">3:39</string>
    <string name="text_bottle">Bottle and a Beat</string>
    <string name="tetx_alltime">All Time Low</string>
    <string name="text_num00">00</string>
    <string name="text_hour">ч.</string>
    <string name="text_num00min">00</string>
    <string name="text_num00sec">00</string>
    <string name="text_sec">с.</string>
    <string name="tetx_altos_adv">Alto\'s Adventure</string>
    <string name="text_noodle">Noodlecake Studio Inc</string>
    <string name="text_install">УСТАНОВИТЬ</string>
    <string name="text_paycon">Есть платный контент</string>
    <string name="txt_download">Колличество скачиваний</string>
    <string name="text_raiting">135 618</string>
    <string name="txt_action" >Экшен</string>
    <string name="txt_sim">Похожие</string>
    <string name="text_snow">В снегах раскинулась сонная горная деревушка, обещающая удивительные приключения</string>
    <string name="text_readmore">ЧИТАТЬ ДАЛЬШЕ</string>
    <string name="text_user">User</string>
    <string name="text_estimate">Оценить приложение</string>
    <string name="text_dollar">1,99 $</string>
    <string name="text_name_first">Nycky</string>
    <string name="text_king_of_drift">Король дрифта</string>
    <string name="text_xp">3 500 XP до след.уровня</string>

</resources>
