<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/rlyt_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#558b2f"
        android:id="@+id/rlyt_toolbar" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_main"
            android:id="@+id/txt_main"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="55dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_btn_menu"
            android:src="@drawable/ic_dehaze_24dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:layout_marginLeft="15dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/rlyt_toolbar"
        android:id="@+id/llyt_my_skill"
        android:background="#fafafa"
        android:layout_margin="5dp"
        android:elevation="3dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:id="@+id/img_my"
            android:background="@drawable/img_my_photo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_name_first"
            android:id="@+id/txt_my_name"
            android:layout_below="@+id/img_my"
            android:layout_alignParentLeft="true"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_king_of_drift"
            android:id="@+id/txt_king_of_drift"
            android:textColor="@android:color/black"
            android:layout_below="@+id/txt_my_name"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_xp"
            android:id="@+id/txt_xp"
            android:layout_toRightOf="@+id/txt_my_name"
            android:layout_toEndOf="@+id/txt_my_name"
            android:textColor="#673ab7"
            android:layout_alignBottom="@+id/txt_my_name"
            android:layout_marginLeft="30dp"
            android:textSize="12sp" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="100"
            android:minHeight="20dp"
            android:minWidth="120dp"
            android:progress="70"
            android:layout_below="@+id/txt_xp"
            android:layout_alignLeft="@+id/txt_xp"
            android:layout_marginLeft="15dp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llyt_my_skill"
        android:text="@string/text_new_games"
        android:id="@+id/txt_new_games"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="20dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="28dp"
        android:id="@+id/btn_more"
        android:text="@string/text_more"
        android:textSize="13sp"
        android:textColor="@android:color/white"
        android:background="#558b2f"
        android:layout_below="@id/llyt_my_skill"
        android:layout_alignParentRight="true"
        android:layout_marginRight="18dp"
        android:layout_marginTop="16dp"
        android:elevation="2dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txt_new_games"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/rlyt_mainIcBtn">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="175dp"
            android:layout_gravity="left|top"
            android:background="@android:color/white"
            android:elevation="2dp"
            android:id="@+id/rlyt_clash"
            android:layout_margin="2dp">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/imgBtn_Clash"
                android:background="@drawable/ic_king"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_clash"
                android:id="@+id/txt_clash"
                android:layout_below="@+id/imgBtn_Clash"
                android:layout_alignLeft="@+id/imgBtn_Clash"
                android:layout_alignStart="@+id/imgBtn_Clash"
                android:textColor="@android:color/background_dark"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_supercell"
                android:id="@+id/txt_supercell"
                android:layout_below="@id/txt_clash"
                android:layout_marginLeft="5dp"
                android:textColor="#616161"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_free"
                android:layout_alignRight="@+id/imgBtn_Clash"
                android:layout_alignEnd="@+id/imgBtn_Clash"
                android:layout_alignParentBottom="true"
                android:textSize="12sp"
                android:textColor="@color/colorGreen"
                android:layout_marginBottom="5dp"
                android:id="@+id/txt_free_clash" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="175dp"
            android:layout_gravity="center_horizontal|top"
            android:background="@android:color/white"
            android:elevation="2dp"
            android:id="@+id/rlyt_dragon"
            android:layout_toRightOf="@+id/rlyt_clash"
            android:layout_margin="2dp">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/imgBtn_dragor"
                android:background="@drawable/ic_dragon_lang"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_dragon"
                android:id="@+id/txt_dragon"
                android:layout_below="@+id/imgBtn_dragor"
                android:layout_alignLeft="@+id/imgBtn_dragor"
                android:layout_alignStart="@+id/imgBtn_dragor"
                android:textColor="@android:color/background_dark"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_social"
                android:id="@+id/txt_socialpoint"
                android:layout_below="@id/txt_dragon"
                android:layout_marginLeft="5dp"
                android:textColor="#616161"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_free"
                android:layout_alignRight="@+id/imgBtn_dragor"
                android:layout_alignEnd="@+id/imgBtn_dragor"
                android:layout_alignParentBottom="true"
                android:textSize="12sp"
                android:textColor="@color/colorGreen"
                android:layout_marginBottom="5dp"
                android:id="@+id/txt_free_drago" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="175dp"
            android:layout_gravity="right|top"
            android:background="@android:color/white"
            android:elevation="2dp"
            android:id="@+id/rlyt_dirac"
            android:layout_toRightOf="@+id/rlyt_dragon"
            android:layout_margin="2dp">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/imgBtn_dirac"
                android:background="@drawable/ic_mediocre"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_dirac"
                android:id="@+id/txt_dirac"
                android:layout_below="@+id/imgBtn_dirac"
                android:layout_alignLeft="@+id/imgBtn_dirac"
                android:layout_alignStart="@+id/imgBtn_dirac"
                android:textColor="@android:color/background_dark"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_medio"
                android:id="@+id/txt_medio"
                android:layout_below="@id/txt_dirac"
                android:layout_marginLeft="5dp"
                android:textColor="#616161"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_dollar"
                android:layout_alignRight="@+id/imgBtn_dirac"
                android:layout_alignEnd="@+id/imgBtn_dirac"
                android:layout_alignParentBottom="true"
                android:textSize="12sp"
                android:textColor="@color/colorGreen"
                android:layout_marginBottom="5dp"
                android:id="@+id/txt_free_med" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="115dp"
            android:layout_gravity="bottom"
            android:id="@+id/rlyt_robot"
            android:background="@android:color/white"
            android:elevation="2dp"
            android:layout_below="@+id/rlyt_clash"
            android:layout_margin="2dp">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/imgBtn_robot"
                android:background="@drawable/ic_robot"
                android:layout_margin="5dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="115dp"
            android:layout_gravity="center_horizontal|bottom"
            android:id="@+id/rlyt_pirat"
            android:background="@android:color/white"
            android:elevation="2dp"
            android:layout_below="@+id/rlyt_dragon"
            android:layout_toRightOf="@+id/rlyt_robot"
            android:layout_margin="2dp">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/imgBtn_pirat"
                android:background="@drawable/ic_pirat"
                android:layout_margin="5dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="115dp"
            android:layout_gravity="right|bottom"
            android:id="@+id/rlyt_hugo"
            android:background="@android:color/white"
            android:elevation="2dp"
            android:layout_below="@+id/rlyt_dirac"
            android:layout_toRightOf="@+id/rlyt_pirat"
            android:layout_margin="2dp">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/imgBtn_hugo"
                android:background="@drawable/ic_hugo_troll"
                android:layout_margin="5dp" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>